# hole_toolpath_planner

./: CMakeLists.txt  README.md  agents.md  package.xml
cfg/: default_params.yaml
include/hole_toolpath_planner/: hole_detector.hpp  parameters.hpp  toolpath_generator.hpp
include/hole_toolpath_planner/gui/: hole_planner_window.hpp
launch/: hole_detector.launch.py
msg/: Hole.msg  HoleArray.msg  Toolpath.msg
resource/: hole_toolpath_planner
scripts/: extract_holes_open3d.py  scale_stl_to_meters.py
src/: hole_detector.cpp  hole_detector_node.cpp  parameters.cpp  toolpath_generator.cpp
src/gui/: hole_gui_app.cpp  hole_planner_window.cpp
srv/: DetectHoles.srv
test_parts/: Sphere_with_holes.ply  Sphere_with_holes.stl  hole_results.csv  hole_test_plate.stl  hole_test_plate_m.stl  output
